--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 *{
     margin:0;
     background-color: black;
+    margin-bottom: 20px;
 }
 .navbar{
     width: 100%;
@@ -48,7 +49,7 @@
 .left button{
     background-color: #FCAF02;
     text-align: center;
-    padding:20px 20px 20px 20px;
+    padding:20px 70px 20px 70px;
     font-family: 'Montserrat';
     font-style: normal;
    font-weight: 400;
@@ -97,11 +98,10 @@ input:focus{
 }
 
 .contact button{
-  align-items: center;
     margin-top: 20px;
     background-color: #FCAF02;
     text-align: center;
-    padding:20px 20px 20px 20px;
+    padding:20px 70px 20px 70px;
     font-family: 'Montserrat';
     font-style: normal;
    font-weight: 400;
@@ -111,8 +111,8 @@ input:focus{
 }
 .button{
     display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content:center;
+ 
 }
 table,th,td{
     color:#FCAF02;
@@ -129,8 +129,9 @@ table,th,td{
 }
 table{
     width: 90%;
+    align-items: center;
 }
-#last{
+tfoot{
     background-color: #FCAF02;
     color: black;
 }
